--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,6 +19,8 @@ jobs:
           poetry-version: 1.4.2
       - name: Install
         run: poetry install
+      - name: Config PYPI_API_TOKEN
+        run: poetry config pypi-token.pypi ${{ secrets.PYPI_API_TOKEN }}
       - name: Build
         run: poetry build
       - name: Publish
